@@ -1,5 +1,7 @@
-2003-01-25    <johan@CP255758-A>
+2003-01-25    <johan@balder>
 
+	* src/SDCCglue.c: A better fix for bug #661910
+	* src/SDCCast.c: A better fix for bug #661910
 	* src/SDCCglue.c (emitRegularMap): That was a little too efficient
 
 2003-01-24  Bernhard Held <bernhard@bernhardheld.de>
